--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       NGINX_PUBLIC_DIR: 'public'
     volumes:
-      - './:/app/files'
+      - './app:/app/files'
     networks:
       - default
       - stack
