--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   "scripts": {
     "post-create-project-cmd": [
       "docker compose up -d",
-      "docker compose --user root app rt-install git",
+      "docker compose exec --user root app rt-install git",
       "docker compose exec app composer create-project laravel/laravel ."
     ]
   }
