--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
   "scripts": {
     "post-create-project-cmd": [
       "docker compose up -d",
-      "docker compose exec --user=root app chown app /app/files",
-      "docker compose exec app composer create-project laravel/laravel ."
+      "docker compose exec app composer create-project laravel/laravel ./laravel",
+      "docker compose exec app mv -f ./laravel/{.,}* ."
     ]
   }
 }
